--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ enum-map = "2.7.3"
 fastrand = "2.2.0"
 dotenv = "0.15"# Latest version at this time
 rpassword = "7.3.1"
+env_logger = "0.11.5"
+log = "0.4.22"
+fern = "0.7.0"
